--- a/index.html
+++ b/index.html
@@ -1,168 +1,1 @@
-<!doctype html>
-<html lang="ko">
-<head>
-	<meta charset="UTF-8" />
-	<title>교보문고 웹퍼블리싱가이드 - Standard Guide</title>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-	<meta name="Robots" content="noindex, nofollow" />
-	<!-- Front CSS-->
-	<link href="wsg/resources/css/common.css" rel="stylesheet" />
-
-	<!-- JS/Guide -->
-	<script src="wsg/resources/libs/jquery-3.6.0.min.js"></script>
-	<script src="wsg/resources/js/guide.js"></script>
-
-	<!-- codeview -->
-	<script src="wsg/resources/libs/codeview/scripts/shCore.js?cb=undefined"></script>
-	<script src="wsg/resources/libs/codeview/scripts/shAutoLoader.js?cb=undefined"></script>
-	<script src="wsg/resources/libs/codeview/scripts/shBrushjScript.js?cb=undefined"></script>
-	<script src="wsg/resources/libs/codeview/scripts/shBrushXml.js?cb=undefined"></script>
-	<script src="wsg/resources/libs/codeview/scripts/shBrushCss.js?cb=undefined"></script>
-	<link href="wsg/resources/libs/codeview/styles/shCoreDefaultWhite.css" rel="stylesheet" />
-	<script>SyntaxHighlighter.config.bloggerMode = false;SyntaxHighlighter.defaults['smart_tabs'] = false;SyntaxHighlighter.all();</script>
-</head>
-
-<body>
-	<div class="wsg_wrapper">
-		<header class="wsg_header_wrapper js_wsg_header_wrapper">
-			<div class="wsg_header_inner">
-				<h1 class="wsg_logo"><a href="./index.html">교보문고 3과제 웹퍼블리싱가이드</a></h1>
-				<button class="btn_aside is_clickEvent" type="button"><span>Menu</span></button>
-				<nav class="wsg_lnb">
-					<ul>
-						<li class="is_current">
-							<a href="./index.html">개요</a>
-						</li>
-						<li>
-							<a href="wsg/rule/rule_intro.html">규칙가이드</a>
-						</li>
-						<li>
-							<a href="wsg/plan/plan_codeset.html">설계가이드</a>
-						</li>
-						<li>
-							<a href="wsg/accessibility/wa_index.html">접근성점검</a>
-						</li>
-						<li>
-							<a href="wsg/seo/seo_intro.html">SEO 가이드</a>
-						</li>
-						<li>
-							<a href="kyobo/ink/index_ink.html">PC 가이드</a>
-						</li>
-						<li>
-							<a href="kyobo/mok/index_mok.html">MO 가이드</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<div class="wsg_container_wrapper">
-			<aside class="wsg_aside js_wsg_aside">
-				<div class="wsg_aside_scroll">
-					<nav class="wsg_snb">
-						<!-- Prototype -->
-						<ul class="wsg_node1_list" style="display: block;">
-							<li class="wsg_node1">
-								<a href="#">규칙가이드</a>
-								<ul class="wsg_node2_list">
-									<li class="wsg_node2 is_current">
-										<a href="index.html">개요</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</div>
-			</aside>
-			<!-- Content -->
-			<article class="wsg_content">
-				<div class="wsg_content_header">
-					<div class="wsg_inner">
-						<h1 class="wsg_h1">개요</h1>
-					</div>
-				</div>
-				<div class="wsg_content_body">
-					<section id="section1" class="wsg_section wsg_inner">
-						<div class="wsg_section_header">
-							<h2 class="wsg_h2">가이드 개요</h2>
-						</div>
-
-						<div class="wsg_section_body">
-							<div class="wsg_tbl_type1">
-								<table>
-									<caption>프로젝트 정보</caption>
-									<colgroup>
-										<col style="width:20%">
-										<col>
-									</colgroup>
-									<tbody>
-										<tr>
-											<th scope="row" class="al_l">프로젝트</th>
-											<td>교보문고 3과제 프로젝트</td>
-										</tr>
-										<tr>
-											<th scope="row" class="al_l">작업기간</th>
-											<td>202108 ~ 202208</td>
-										</tr>
-										<tr>
-											<th scope="row" class="al_l">가이드 작업자</th>
-											<td>도민혁 팀장(glim0917@theglim.co.kr)</td>
-										</tr>
-										<tr>
-											<th scope="row" class="al_l">최종 수정일</th>
-											<td>20210900</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-							<h3 class="wsg_h3">프로젝트 범위</h3>
-							<ul class="wsg_desc">
-								<li>교보문고 3과제 [범위] 퍼블리싱 작업 및 이후 과제를 위한 퍼블리싱 가이드를 제공한다.</li>
-							</ul>
-							<h4 class="wsg_h4">소제목</h4>
-							<ul class="wsg_desc">
-								<li>설명</li>
-							</ul>
-						</div>
-					</section>
-
-
-					<section id="section2" class="wsg_section wsg_inner">
-						<div class="wsg_section_header">
-							<h2 class="wsg_h2">개정 이력</h2>
-						</div>
-						<div class="wsg_section_body">
-							<div class="wsg_tbl_type1">
-								<table>
-									<caption>개정이력 목록</caption>
-									<colgroup>
-										<col style="width:120px;">
-										<col>
-										<col style="width:120px;">
-									</colgroup>
-									<thead>
-										<tr>
-											<th>개정일자</th>
-											<th>개정 내역</th>
-											<th>작성자</th>
-										</tr>
-										<tr>
-											<td class="al_c">2021.00.00</td>
-											<td>
-												<p>최초 제정</p>
-											</td>
-											<td class="al_c">도민혁</td>
-										</tr>
-									</thead>
-								</table>
-							</div>
-						</div>
-					</section>
-				</div>
-			</article>
-			<!-- //Content -->
-
-		</div>
-	</div>
-</body>
-</html>
+핫트랙스
